--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,6 @@ COLORS: #c3aa94 LIGHT BROWN
 @import url('https://fonts.googleapis.com/css?family=Lato:100,400,700&display=swap');
 
 html {
-  background-image: linear-gradient(#ae957f, #c3aa94);
   color: #f1f1f1;
   font-family: 'Lato', sans-serif;
   font-size: 16px;
@@ -31,6 +30,11 @@ a {
 /* Specifics */
 
 /* Navbar */
+
+.nav-hero {
+  background-image: linear-gradient(#ae957f, #c3aa94);
+  min-height: 100vh;
+}
 
 .navbar {
   display: flex;
@@ -85,3 +89,8 @@ a {
 .headline-sub__bold {
   font-weight: 600;
 }
+
+/* .feature {
+  background-image: #fff;
+  min-height: 100vh;
+} */
