--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ COLORS: #c3aa94 LIGHT BROWN
 
 /* Base */
 
-@import url('https://fonts.googleapis.com/css?family=Lato:100,400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700&display=swap');
 
 html {
   color: #f1f1f1;
@@ -27,6 +27,33 @@ a {
   text-decoration: none;
 }
 
+.mobile-menu {
+  display: none;
+}
+
+/* Shared */
+
+.section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 4.875rem;
+}
+
+.header {
+  font-size: 4rem;
+}
+
+.subheader {
+  font-size: 2rem;
+  font-weight: 100;
+  letter-spacing: 0.0625rem;
+}
+
+.subheader--bold {
+  font-weight: 600;
+}
+
 /* Specifics */
 
 /* Navbar */
@@ -40,7 +67,7 @@ a {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 2rem 0;
+  padding-top: 2.5rem;
 }
 
 .title {
@@ -66,34 +93,34 @@ a {
   padding: 0.55rem 1rem;
 }
 
-/* Hero */
+/* Hero Section */
 
 .hero {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin-top: 7rem;
 }
 
-.headline {
-  font-size: 4rem;
-}
-
-.headline-sub {
-  font-size: 2rem;
+.header-sub {
   font-weight: 100;
-  letter-spacing: 0.0625rem;
   margin-top: 1rem;
 }
 
-.headline-sub__bold {
-  font-weight: 600;
+/* Feature 1 Section */
+
+.feature1 {
+  background-color: #fff;
+  color: #554f49;
+  min-height: 100vh;
 }
 
-/* .feature {
-  background-image: #fff;
-  min-height: 100vh;
-} */
+.feature1-header {
+  font-weight: 300;
+  margin-bottom: 3.125rem;
+}
+
+.feature1-sub {
+  font-weight: 300;
+  line-height: 1.25;
+}
 
 
 /* Responsiveness */
@@ -117,11 +144,11 @@ a {
     margin: 6px 0;
   }
 
-  .headline {
+  .header {
     font-size: 1.3rem;
   }
 
-  .headline-sub {
+  .header-sub {
     font-size: 0.666rem;
   }
 }
@@ -145,11 +172,11 @@ a {
     margin: 6px 0;
   }
 
-  .headline {
+  .header {
     font-size: 2rem;
   }
 
-  .headline-sub {
+  .header-sub {
     font-size: 1rem;
   }
 }
@@ -173,11 +200,11 @@ a {
     margin: 6px 0;
   }
 
-  .headline {
+  .header {
     font-size: 3rem;
   }
 
-  .headline-sub {
+  .header-sub {
     font-size: 1.5rem;
   }
 }
