--- a/css/styles.css
+++ b/css/styles.css
@@ -149,7 +149,7 @@ a {
     font-size: 1.3rem;
   }
 
-  .header-sub {
+  .subheader {
     font-size: 0.666rem;
   }
 }
@@ -178,7 +178,7 @@ a {
     font-size: 2rem;
   }
 
-  .header-sub {
+  .subheader {
     font-size: 1rem;
   }
 }
@@ -207,7 +207,7 @@ a {
     font-size: 3rem;
   }
 
-  .header-sub {
+  .subheader {
     font-size: 1.5rem;
   }
 }
