--- a/css/styles.css
+++ b/css/styles.css
@@ -188,6 +188,51 @@ a {
   max-width: 800px;
 }
 
+/* Purchase Section */
+
+.purchase {
+  background-color: #ebebeb;
+  color: #554f49;
+  min-height: 100vh;
+}
+
+.purchase-header {
+  font-weight: 300;
+  margin-bottom: 3.125rem;
+}
+
+.purchase-sub {
+  font-weight: 300;
+  line-height: 1.25;
+  max-width: 800px;
+}
+
+/* Footer */
+
+.footer {
+  color: #554f49;
+  display: flex;
+  justify-content: space-around;
+  font-weight: 300;
+  padding: 2.5rem 0;
+}
+
+.footer-authorship {
+  line-height: 2;
+}
+
+.footer-links {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.footer-item {
+  font-size: 1rem;
+  margin: 0 1.5rem;
+  text-transform: uppercase;
+}
+
 /* Responsiveness */
 
 /* Target small mobile */
