--- a/css/styles.css
+++ b/css/styles.css
@@ -392,4 +392,40 @@ a:hover {
   .subheader {
     font-size: 1.5rem;
   }
+
+}
+
+
+/* Target all smaller than desktop  */
+@media screen and (max-width: 1023px) {
+  /* Footer */
+
+  .footer {
+    flex-direction: column;
+    align-items: center;
+    font-weight: 300;
+    padding: 2.5rem 0;
+  }
+
+  .footer-authorship {
+    margin-top: 3rem;
+    line-height: 1.5;
+    order: 2;
+  }
+
+  .footer-links {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer-item {
+    font-size: 1rem;
+    line-height: 3;
+  }
+
+  .footer-item__author {
+    line-height: 1.5;
+    margin: 0;
+    text-transform: none;
+  }
 }
