--- a/css/styles.css
+++ b/css/styles.css
@@ -399,18 +399,57 @@ a:hover {
 
 
 /* Target all smaller than desktop  */
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1227px) {
+
+  /* Purchase section */
+
+
+  .purchase-options {
+    padding-top: 0;
+  }
+
+  .purchase-sub {
+    font-size: 1.3125rem;
+    padding-bottom: 1rem;
+  }
+
+  .purchase-options {
+    flex-direction: column;
+  }
+
+  .potato-lite {
+    border-right: none;
+  }
+
+  .potato-pro {
+    border-right: none;
+  }
+
+  .purchase-links {
+    border: 1px solid #808080;
+    padding-top: 1rem;
+  }
+
+  .purchase-item {
+    font-size: 1.125rem;
+    line-height: 1.5;
+  }
+
+  .order-body {
+    padding: 1.5rem 0 1rem 0;
+  }
+
   /* Footer */
 
   .footer {
     flex-direction: column;
     align-items: center;
     font-weight: 300;
-    padding: 2.5rem 0;
+    padding: 1rem 0;
   }
 
   .footer-authorship {
-    margin-top: 3rem;
+    margin-top: 1rem;
     line-height: 1.5;
     order: 2;
   }
@@ -430,4 +469,5 @@ a:hover {
     margin: 0;
     text-transform: none;
   }
+
 }
