Add potato chips image

--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,12 @@ a:hover {
   letter-spacing: 0.0625rem;
 }
 
+.responsive-image {
+  width: 100%;
+  height: auto;
+  max-width: 600px;
+}
+
 .subheader--bold {
   font-weight: 600;
 }
@@ -171,6 +177,10 @@ a:hover {
 
 .header--bold {
   font-weight: 400;
+}
+
+.potato-chips-image {
+  padding-top: 7rem;
 }
 
 /* Feature 4 Section (Testimonials) */
