--- a/css/styles.css
+++ b/css/styles.css
@@ -368,6 +368,10 @@ a:hover {
   .nutritional-facts-item {
     font-size: 1rem;
   }
+
+  .feature2-sub {
+    max-width: 252px;
+  }
 }
 
 /* Target large mobile */
