--- a/css/styles.css
+++ b/css/styles.css
@@ -353,11 +353,15 @@ a:hover {
   }
 
   .header {
-    font-size: 1.3rem;
+    font-size: 2rem;
+    padding: 0 2rem;
+    text-align: center;
   }
 
   .subheader {
-    font-size: 0.666rem;
+    font-size: 1rem;
+    padding: 0 2rem;
+    text-align: center;
   }
 
   .nutritional-facts {
@@ -366,11 +370,7 @@ a:hover {
   }
 
   .nutritional-facts-item {
-    font-size: 1rem;
-  }
-
-  .feature2-sub {
-    max-width: 252px;
+    font-size: 1.5rem;
   }
 }
 
