--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
-/*
- 
+/* 
+
 COLORS: #c3aa94 LIGHT BROWN
         #f1f1f1 OFF-WHITE
         #ae957f DARKER BROWN
@@ -28,8 +28,7 @@ a {
 }
 
 a:hover {
-  padding-bottom: 5px;
-  border-bottom: 3px solid currentColor;
+  text-decoration: underline;
 }
 
 .mobile-menu {
@@ -111,7 +110,6 @@ a:hover {
   background-color: #f1f1f1;
   color: #554f49;
   text-decoration: none;
-  border: none;
 }
 
 
