--- a/css/styles.css
+++ b/css/styles.css
@@ -454,9 +454,14 @@ a:hover {
   }
 
   .purchase-links {
-    border: 1px solid #808080;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding-top: 1rem;
     margin-bottom: 2rem;
+    transition: 0.3s;
+  }
+
+  .purchase-links:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
   }
 
   .purchase-item {
