Add border radius to the cards

--- a/css/styles.css
+++ b/css/styles.css
@@ -454,6 +454,7 @@ a:hover {
   }
 
   .purchase-links {
+    border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding-top: 1rem;
     margin-bottom: 2rem;
